# logseq2obsidian

./: .gitignore  README.md  README_zh-CN.md  debug_regex.py  debug_specific_case.py  debug_specific_cases.py  debug_uuid_regex.py  pyproject.toml  test.py  test_block_id_fix.py  test_block_sample.md  test_category_detection.py  test_formatting_optimization.py  test_formatting_sample.md  test_indented_block_fix.py  test_indented_id.py  test_page_links_edge_cases.py  test_page_links_fix.py  test_pdf_highlight.py  test_real_block_processing.py  test_real_formatting.py  test_tag_content.py  test_various_tags.py
.github/: CODEOWNERS  pull_request_template.md
ai_workspace/: EMERGENCY_REMINDER.md  NEXT_SESSION_GUIDE.md  PROJECT_STATUS.md  README.md
docs/: alias_meta_property_fix.md  date_format_fix.md  filename_encoding_completion_summary.md  filename_encoding_feature.md  smart_tag_detection.md
scripts/: convert_examples.py  copy_logseq_data.py  lint.py  setup.sh  test_runner.py
src/: __init__.py  file_manager.py  filename_processor.py  logseq_parser.py  main.py  obsidian_formatter.py  utils.py
tests/: README.md  __init__.py  test_alias_fix_verification.py  test_alias_meta_fix.py  test_basic.py  test_block_id_comprehensive.py  test_bug_fixes.py  test_category_detection_comprehensive.py  test_category_tag_feature.py  test_conversion.py  test_embed_comprehensive.py  test_filename_processing.py  test_formatting_comprehensive.py  test_meta_properties.py  test_page_links_bug_fix.py  test_page_links_comprehensive.py  test_real_data.py  test_tag_removal.py  (+1 more)
(+28 files in other folders)
